[package]
name = "radicle-ci"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Vincenzo Palazzo <vincenzopalazzo@member.fsf.org>"]

[dependencies]
# FIXME: tokio is the wrong choice here, we should try to use
# io-reactor, but the io-reactor do not support mio or pool for fss, so just for
# this proof of concept we can use tokio.
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "macros", "process"] }
radicle-term = { path = "../radicle-term" }
lexopt = { version = "0.3" }
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
